<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Poject_01</string>

    <!-- Strings used for fragments for navigation -->+
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_name">Restaurant name -</string>
    <string name="gps_cords">GPS cords -</string>
    <string name="address">Address -</string>
    <string name="inspection_list">Inspection List:</string>
    <string name="date">Date</string>
    <string name="todo">TODO</string>
    <string name="violations_text_main_1">There were:</string>
    <string name="violations_text_main_2">violations</string>
    <string name="days_ago_main_date">days ago</string>
    <string name="no_recent_inspections_main">NO RECENT INSPECTIONS</string>
    <string name="violations_text_main_single_1">There was:</string>
    <string name="violations_text_single">violation</string>
    <string name="num_critical_restaurant">Number of critical issues =</string>
    <string name="num_non_critical_restaurant">Number of non critical issues =</string>
    <string name="hazard_lvl_restaurant">Hazard level =</string>
    <string name="google_maps_API_key">AIzaSyAnGniTvBrdUSk2FuIqRSJSP29NTCzC6n8</string>
    <string name="title_activity_maps">Map</string>
    <string name="updating">Updating…</string>
    <string name="update_alert_title">Update Available</string>
    <string name="update_alert_yes">Yes</string>
    <string name="update_alert_no">No</string>
    <string name="do_you_want_to_download_new_data">Do you want to download new data?</string>
    <string name="restaurant_details_title">There was </string>
    <string name="restaurant_details_title_2"> recent inspection: </string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="vio101">Plans/construction/alterations not in accordance with the Regulation [s. 3; s. 4]</string>
    <string name="vio102">Operation of an unapproved food premises [s. 6(1)]</string>
    <string name="vio103">Failure to hold a valid permit while operating a food service establishment [s. 8(1)]</string>
    <string name="vio104">Permit not posted in a conspicuous location [s. 8(7)]</string>
    <string name="vio201">Food contaminated or unfit for human consumption [s. 13]</string>
    <string name="vio202">Food not processed in a manner that makes it safe to eat [s. 14(1)]</string>
    <string name="vio203">Food not cooled in an acceptable manner [s. 12(a)]</string>
    <string name="vio204">Food not cooked or reheated in a manner that makes it safe to eat [s. 14(1)]</string>
    <string name="vio205">Cold potentially hazardous food stored/displayed above 4 °C. [s. 14(2)]</string>
    <string name="vio206">Hot potentially hazardous food stored/displayed below 60 °C. [s. 14(2)]</string>
    <string name="vio208">Foods obtained from unapproved sources [s. 11]</string>
    <string name="vio209">Food not protected from contamination [s. 12(a)]</string>
    <string name="vio210">Food not thawed in an acceptable manner [s. 14(2)]</string>
    <string name="vio211">Frozen potentially hazardous food stored/displayed above -18 °C. [s. 14(3)]</string>
    <string name="vio212">Operator has not provided acceptable written food handling procedures [s. 23]</string>
    <string name="vio301">Equipment/utensils/food contact surfaces not maintained in sanitary condition [s. 17(1)]</string>
    <string name="vio302">Equipment/utensils/food contact surfaces not properly washed and sanitized [s. 17(2)]</string>
    <string name="vio303">Equipment/facilities/hot and cold water for sanitary maintenance not adequate [s. 17(3); s. 4(1)(f)]</string>
    <string name="vio304">Premises not free of pests [s. 26(a)]</string>
    <string name="vio305" tools:ignore="TypographyOther">Conditions observed that may allow entrance/harbouring/breeding of pests [s. 26(b)(c)]</string>
    <string name="vio306">Food premises not maintained in a sanitary condition [s. 17(1)]</string>
    <string name="vio307">Equipment/utensils/food contact surfaces are not of suitable design/material [s. 16; s. 19]</string>
    <string name="vio308">Equipment/utensils/food contact surfaces are not in good working order [s. 16(b)]</string>
    <string name="vio309">Chemicals cleansers and similar agents stored or labeled improperly [s. 27]</string>
    <string name="vio310">Single use containers and utensils are used more than once [s. 20]</string>
    <string name="vio311">Premises not maintained as per approved plans [s. 6(1)(b)]</string>
    <string name="vio312">Items not required for food premises operation being stored on the premises [s. 18]</string>
    <string name="vio313">Live animal on the premises excluding guide animal in approved areas [s. 25(1)]</string>
    <string name="vio314">Operator has not provided acceptable written sanitation procedures [s. 24]</string>
    <string name="vio315">Refrigeration units and hot holding equipment lack accurate thermometers [s. 19(2)]</string>
    <string name="vio401">Adequate handwashing stations not available for employees [s. 21(4)]</string>
    <string name="vio402">Employee does not wash hands properly or at adequate frequency [s. 21(3)]</string>
    <string name="vio403">Employee lacks good personal hygiene clean clothing and hair control [s. 21(1)]</string>
    <string name="vio404">Employee smoking in food preparation/processing/storage areas [s. 21(2)]</string>
    <string name="vio501">Operator does not have FOODSAFE Level 1 or Equivalent [s. 10(1)]</string>
    <string name="vio502">In operator’s absence no staff on duty has FOODSAFE Level 1 or equivalent [s. 10(2)]</string>
    <string name="list_of_restaurants">List of Restaurants</string>
    <string name="inspection_details_activity">Inspection Details</string>
    <string name="rest_details_activity">Restaurant Details</string>
    <string name="critical">Critical: </string>
    <string name="non_critical">Non Critical: </string>
    <string name="list_of_rest">List of Restaurants</string>
    <string name="hazard_rating">,  HAZARD RATING - </string>
    <string name="restaurant_name_">Restaurant Name</string>
    <string name="list_view">List view</string>
    <string name="map_view">Map view</string>
    <string name="comma">\", \"</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="moderate">Moderate</string>
    <string name="january">JANUARY</string>
    <string name="february">FEBRUARY</string>
    <string name="march">MARCH</string>
    <string name="april">APRIL</string>
    <string name="may">MAY</string>
    <string name="june">JUNE</string>
    <string name="july">JULY</string>
    <string name="august">AUGUST</string>
    <string name="september">SEPTEMBER</string>
    <string name="october">OCTOBER</string>
    <string name="november">NOVEMBER</string>
    <string name="december">DECEMBER</string>
    <string name="latitude">\" (Latitude)\n\"</string>
    <string name="longitude">\" (Longitude)\"</string>
    <string name="routine">Routine</string>
    <string name="follow_up">Follow-up</string>
    <string name="critical_violation_list">Critical</string>
    <string name="non_critical_violation_list">Non Critical</string>

    <string name="filter">Filter</string>
    <string name="filterLesser"><![CDATA[<=]]></string>
    <string name="filterGreater"><![CDATA[>=]]></string>
    <string name="map_search_text"><![CDATA[Enter Restaurant,Hazard Rating, >=N Violations, Favourite]]></string>
    <string name="search_name_hazard_level">Search: name,hazard level or favourites</string>
    <string name="save_filter">Save</string>
    <string name="cancel_filter">Cancel</string>
    <string name="reset_filter">Reset</string>

    <string name="hazard_level">Hazard Level:</string>
    <string name="favourites">Favourites</string>
    <string name="or">or</string>
    <string name="critical_violations">critical violations</string>
    <string name="name">name</string>
    <string name="empty_string" />
    <string name="less_drop_down">Less</string>
    <string name="more_drop_down">More</string>


</resources>