<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/filterName"
        android:layout_width="175dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        app:backgroundTint="#FF6200EE"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filter_hazard_level"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/hazard_level"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/filterName"
        app:layout_constraintTop_toBottomOf="@+id/filterName" />

    <EditText
        android:id="@+id/filterViolations"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        app:backgroundTint="#FF6200EE"
        android:hint="5"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/filterViolationsPart1"
        app:layout_constraintStart_toStartOf="@+id/filterName" />

    <Spinner
        android:id="@+id/violationsDropdown"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/filterViolationsPart1"
        app:layout_constraintTop_toBottomOf="@+id/filter_hazard_level" />

    <TextView
        android:id="@+id/filterViolationsPart1"
        android:layout_width="48dp"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/filterViolations"
        app:layout_constraintTop_toBottomOf="@+id/filter_hazard_level" />

    <TextView
        android:id="@+id/filterViolationsP2"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/critical_violations"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/violationsDropdown"
        app:layout_constraintTop_toBottomOf="@+id/filter_hazard_level" />

    <Spinner
        android:id="@+id/spinnerHazard"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/filter_hazard_level"
        app:layout_constraintTop_toBottomOf="@+id/filterName" />


</androidx.constraintlayout.widget.ConstraintLayout>