<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".UI.RestaurantDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:translationX="150sp"
        android:translationY="190sp">

        <TextView
            android:id="@+id/restaurant_name_dsp"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="place holder"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/address_dsp"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="place holder"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/gps_cords_dsp"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="place holder"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Poject_01.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_detail_single_restaurant"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="center" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:translationX="20sp"
        android:translationY="190sp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/restaurant_name"
            android:textAlignment="textEnd"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/address"
            android:textAlignment="textEnd"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/gps_cords"
            android:textAlignment="textEnd"
            android:textColor="@color/black" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="304dp"
        android:layout_height="169dp"
        android:contentDescription="@string/todo"
        android:translationX="50sp"
        android:translationY="10sp"
        app:srcCompat="@drawable/restaurant_image" />

    <TextView
        android:id="@+id/inspectionListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inspection_list"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:translationX="20sp"
        android:translationY="320sp" />

    <LinearLayout
        android:id="@+id/lottie_animation"
        android:layout_width="64dp"
        android:layout_height="69dp"
        android:orientation="horizontal"
        android:translationX="310sp"
        android:translationY="300sp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/welcome_gift"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/inspection_lottie" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="375dp"
        android:layout_height="352dp"
        android:paddingBottom="140dp"
        android:translationX="20sp"
        android:translationY="370sp" />

    <CheckBox
        android:id="@+id/starDetails"
        style="?android:attr/starStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>